--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1"
 environs = "^11.0.0"
 django-cors-headers = "^4.4.0"
 psycopg2-binary = "^2.9.9"
+djangorestframework = "^3.15.2"
 
 
 [build-system]
